app.log
Traceback (most recent call last):
  File "/home/xufei/Public/gemini/developing/app.py", line 13, in <module>
    from orchestrator.main import Orchestrator
  File "/home/xufei/Public/gemini/developing/orchestrator/main.py", line 189
    execution_steps.append({'action': 'Describe the nitrogenase enzyme complex', 'justification': 'Nitrogenase is the central enzyme for nitrogen fixation. Understanding its structure and function is key.', 'success_metric': 'Explanation of nitrogenase components (Fe-protein, MoFe-protein) and its oxygen sensitivity.', 'details': 'Detail the two main components and how oxygen exclusion is achieved (e.g., leghemoglobin in legumes).'})}
                                                                                                                                                                                                                                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'
